--- a/lab_ml/ml01_numpy.ipynb
+++ b/lab_ml/ml01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyORcnz6PbwnV57tOmNbpp2h",
+      "authorship_tag": "ABX9TyN7AkbMDv+ggwwqrkLVswSq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1695,6 +1695,263 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 배열 합치기(concatenate)\n",
+        "\n",
+        "*   `np.concatenate([array1, array2, ...], axis=0)`: 특정 축(axis) 방향으로 배열 이어붙이기.\n",
+        "*   `np.r_[array1, array2]`: 행들을 이어붙이기. axis=0 방향으로 이어붙이기.\n",
+        "*   `np.c_[array1, array2]`: 컬럼들을 이어붙이기. axis=1 방향으로 이어붙이기.\n"
+      ],
+      "metadata": {
+        "id": "WVbdSodUdrbD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (2, 3) shape의 2d array\n",
+        "arr1 = np.arange(6).reshape((2, 3))\n",
+        "print(arr1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YCzBj0KkevrX",
+        "outputId": "5adea8d0-c017-454d-d79d-700d8bdd3297"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (1, 3) shape의 2d array\n",
+        "arr2 = np.array([[10, 20, 30]])\n",
+        "print(arr2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j3E8QaeTe8Vg",
+        "outputId": "01563ef3-78fd-4aa5-851f-f372455c2cfc"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10 20 30]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (2, 1) shape의 2d array\n",
+        "arr3 = np.array([[11], [12]])\n",
+        "print(arr3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oVNaAYBxfQMg",
+        "outputId": "a21bd04f-5362-4e97-c94a-346143ad8bb5"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[11]\n",
+            " [12]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = np.concatenate([arr1, arr2])  # axis=0(기본값) 생략 가능\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yg-TsRi5fkAo",
+        "outputId": "0f74c228-3167-4315-bcb8-732863cb2f31"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [10 20 30]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = np.concatenate([arr1, arr3], axis=1)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KLKyxOnAgRpI",
+        "outputId": "c210c896-79fa-48cd-b309-d6011ff3410d"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2 11]\n",
+            " [ 3  4  5 12]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.r_[arr1, arr2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1a8hikvugwNl",
+        "outputId": "cee5c03f-03be-44c1-999a-995bd3c4e11d"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2],\n",
+              "       [ 3,  4,  5],\n",
+              "       [10, 20, 30]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.c_[arr1, arr3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qbev46Qkg0AQ",
+        "outputId": "aaf75d15-79de-483d-a63d-74164820c790"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2, 11],\n",
+              "       [ 3,  4,  5, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr1 = np.arange(6).reshape((2, 3))\n",
+        "print(arr1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SBV2b_oyiWZm",
+        "outputId": "e49cbb3b-cd3a-4229-9775-4d27785195fc"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr2 = np.array([10, 20, 30])\n",
+        "print(arr2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "okZwB6yUidSh",
+        "outputId": "73317906-2739-4128-bb02-62151a52cc24"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10 20 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# np.concatenate([arr1, arr2], axis=0)\n",
+        "#> ValueError 발생. 차원이 다르면 이어붙이기가 되지 않음."
+      ],
+      "metadata": {
+        "id": "Zr8_l4foik1A"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
